@@ -1,3 +1,9 @@
+2005-02-12  Alexander Gottwald  <ago at freedesktop dot org>
+
+	* winmsg.h
+	* winmsg.c:
+	New function winTrace
+	
 2005-02-08  Alexander Gottwald  <ago at freedesktop dot org>
 
 	* winkeybd.c:
